# markus

./: Dockerfile  Dockerfile.bak  README.md  clang-tidy-fixes.yaml  docker-compose.yml
.github/workflows/: docker-image.yml
GTest/: GTestConfig.cmake  GTestTargets-none.cmake
Swagger/: CMakeCache.txt  CMakeLists.txt  IJson.cpp  IJson.h  Makefile  MediaType.h  OperationFactory.cpp  OperationFactory.h  QVariantHasher.h  SwaggerObject.cpp  SwaggerObject.h  cmake_install.cmake  compile_commands.json  swagger_global.h
Swagger/.qt/: QtDeploySupport.cmake
Swagger/OpenApi/: Components.cpp  Components.h  OpenApi.cpp  OpenApi.h  Operation.cpp  Operation.h
Swagger/OpenApi/Information/: Contact.cpp  Contact.h  Info.cpp  Info.h  License.cpp  License.h  Server.cpp  Server.h
Swagger/OpenApi/Parameter/: Cookie.cpp  Cookie.h  Header.cpp  Header.h  Parameter.cpp  Parameter.h  ParameterFactory.cpp  ParameterFactory.h  PathParameter.cpp  PathParameter.h  Query.cpp  Query.h
Swagger/OpenApi/Path/: Callbacks.cpp  Callbacks.h  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  Path.cpp  Path.h  PathFactory.cpp  PathFactory.h  PathFragment.cpp  PathFragment.h  PathRoute.cpp  PathRoute.h  Paths.cpp  Paths.h
Swagger/OpenApi/RequestBody/: RequestBody.cpp  RequestBody.h  RequestBodyFactory.cpp  RequestBodyFactory.h
Swagger/OpenApi/Response/: Response.cpp  Response.h  ResponseFactory.cpp  ResponseFactory.h  Responses.cpp  Responses.h  ResponsesFactory.cpp  ResponsesFactory.h
Swagger/OpenApi/Schema/: Array.cpp  Array.h  ConvertError.cpp  ConvertError.h  Properties.h  Schema.cpp  Schema.h  SchemaList.cpp  SchemaList.h
Swagger/OpenApi/Schema/DynamicField/: DynamicField.cpp  DynamicField.h  FieldList.cpp  FieldList.h
Swagger/OpenApi/Schema/DynamicField/Field/: Default.cpp  Default.h  Description.cpp  Description.h  Enum.cpp  Enum.h  Format.cpp  Format.h  Items.cpp  Items.h  Max.cpp  Max.h  MaxLength.cpp  MaxLength.h  Min.cpp  Min.h  MinLength.cpp  MinLength.h  MultipleOf.cpp  MultipleOf.h  Pattern.cpp  Pattern.h  ReadOnly.cpp  ReadOnly.h  Summary.cpp  Summary.h  Type.cpp  Type.h  WriteOnly.cpp  WriteOnly.h
Swagger/OpenApi/Schema/Factory/: FieldFactory.cpp  FieldFactory.h  SchemaFactory.cpp  SchemaFactory.h
Swagger/OpenApi/Schema/Object/: AllOf.cpp  AllOf.h  AnyOf.cpp  AnyOf.h  Object.cpp  Object.h  OneOf.cpp  OneOf.h
Swagger/container/: List.cpp  List.h  Map.cpp  Map.h  Reference.h  literlas.h
Swagger/swagger-ui-app/: package-lock.json  package.json  swagger-ui-app.esproj
Swagger/swagger-ui-app/public/: index.html
Swagger/swagger-ui-app/release/: asset-manifest.json  index.html
Swagger/swagger-ui-app/release/static/css/: main.4c50dc73.css  main.4c50dc73.css.map
Swagger/swagger-ui-app/release/static/js/: 787.a69ae5b5.chunk.js  787.a69ae5b5.chunk.js.map  main.03064ef7.js
Swagger/swagger-ui-app/src/: App.tsx
Swagger/test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
demo_cmake/: .gitmodules  docker-compose.yml  requirements.txt
demo_cmake/docker/: Dockerfile  get_linuxdeploy_appimage.sh
demo_cmake/docker/GTest/: GTestTargets.cmake
demo_cmake/docker/RunService/: Dockerfile  Dockerfile.bak  docker-compose.yml
demo_cmake/scripts/: Build.py  BuildAndTest.py  BuildLinux.py  Builder.py  File.py  Package.py  ServiceContainer.py  createGithubRelease.py  initialize.py  requirements.txt  resetDatabase.py  runTests.py  startDatabase.py
demo_cmake/scripts/classes/: CMake.py  Docker.py  Environment.py  EnvironmentFactory.py  Github.py
demo_cmake/scripts/classes/Linux/: AppDeployer.py  Linux.py
demo_cmake/scripts/classes/Windows/: FileMover.py  InstallerLoader.py  Vcpkg.py  Windows.py
demo_cmake/scripts/install/: Docker.py  MySql.py
demo_cmake/scripts/templates/: api_path.cpp  api_path.h  config.json  simple.cpp  simple.h  template.Desktop
demo_cmake/scripts/templates/entity/: normal.h
demo_cmake/scripts/templates/entity/abstract/: baseClass.cpp  baseClass.h  subClass.cpp  subClass.h
